--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     width: 60%;
@@ -18,35 +19,44 @@ body {
     grid-area: 1/1/3/2;
     background-color: rgb(46, 141, 219);
     display: grid;
-    grid-template-rows: 50px 130px 120px;
-}
-.navigation, .settings, .title{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    color: white;
-}
-.icon, .branding {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-}
-.icon {
-    gap: 4.5px;
-    align-items: center;
+    grid-template-rows: 80px 220px 200px;
+    padding: 12px;
 }
 .title {
-    margin-top: 10px;
+    display: flex;
+    color: white;
+    gap: 12px;
+    padding: 7px 0px 0px 26px;
 }
-.title .icon {
-    justify-content: start;
-    margin-top: -1px;
+.title > * {
+    font-size: 24px;
+}
+.navigation, .settings {
+    display: flex;
+    flex-direction: column;
+    gap: 18.5px;
+    color: white;
+    padding: 2px 0px 10px 18.5px;
+}
+.branding {
+    display: flex;
+    gap: 18px;
+}
+.branding > * {
+    font-size: 18px;
+}
+.branding h6 {
+    padding-left: 4px;
+}
+.settings {
+    justify-content: center;
+    padding-top: 26px;
 }
 /* HEADER COMPONENTS */
 .header {
     display: grid;
-    grid-template-rows: .8fr 1fr;
-    background-color: bisque;
+    grid-template-rows: 1fr 1fr;
+    background-color: bisque
 }
 .header-child1 {
     display: grid;
@@ -62,8 +72,8 @@ body {
     place-self: center;
 }
 input {
-    height: fit-content;
-    width: 93%;
+    height: 24px;
+    width: 91.5%;
     align-self: center;
     margin-left: -10px;
     border-radius: 16px;
@@ -79,46 +89,54 @@ input {
 }
 .user {
     width: max-content;
-    font-size: .65rem;
+    font-size: 1rem;
     font-weight: 600;
 }
-
 .header-child2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    border: 2px solid red
+    border: 2px solid red;
+    padding-left: 32px;
 }
 .user-info {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+    display: flex;
+    gap: 16px;
 }
 .user-greetings {
+    display: flex;
+    flex-direction: column;
+    padding: 6px 0px 0px 16px;
     font-size: .8rem;
     align-content: center;
+    gap: 1px;
 }
-p {
-    font-size: .5rem;
+.user-greetings p {
+    font-size: .8rem;
     font-weight: 600;
+}
+.user-greetings .user {
+    font-size: 1.2rem;
 }
 .actions {
     display: grid;
-    place-items: center;
+    padding-top: 8px;
     justify-content: end;
     border: 2px solid lime;
 }
 .buttons {
     display: flex;
-    height: fit-content;
-    margin-right: 24px;
-    gap: 12px;
+    margin-right: 44px;
+    gap: 24px;
 }
 .buttons > * {
     border-radius: 16px;
+    height: 32px;
+    width: 80px;
     padding: 4px;
-    width: 3rem;
-    font-size: .5rem;
+    font-size: .8rem;
     font-weight: 600;
     color: white;
+    border-style: none;
     background-color: rgb(23, 131, 233);
 }
 .profile-pic {
@@ -127,7 +145,157 @@ p {
     padding-right: 26px;
 }
 
-
+/* MAIN-CONTENT COMPONENTS */
 .main-content {
     background-color: azure;
+    min-height: 92.8%;
+}
+.tags {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    height: 48px;
+    padding: 12px 130px 2px 12px;
+    border: 2px solid blueviolet;
+}
+.tags p {
+    font-size: 1.125rem;
+}
+.contents {
+    display: flex;
+    background-color: rgb(216, 160, 179);
+    opacity: 0.6;
+    min-height: 85%;
+    gap: 15px;
+    padding: 4px 28px 0 10px;
+}
+.contents-left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(9, 1fr);
+    flex: 1;
+    gap: 24px;
+    padding-left: 5px;
+}
+.left-card {
+    display: flex;
+    flex-direction: column;
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding: 0px 8px 0px 12px; */
+    padding: 26px 18px 0px 24px;
+}
+.left-card h6 {
+    font-size: 1rem;
+    letter-spacing: -.5px;
+    color: black;
+    font-weight: 700;
+}
+.card-content {
+    grid-area: 1/1/5/3;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 74%;
+}
+.card-content p {
+    font-size: .825rem;
+    color: white;
+    padding: 4px;
+}
+.card-icons {
+    grid-area: 5/2/7/3;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    background-color: chartreuse;
+    height: 36px;
+}
+.contents-right {
+    display: grid;
+    grid-template-rows: 1.1fr .25fr 1.065fr;
+    flex-basis: 25.75%;
+    background-color: aqua;
+    padding-left: 2px;
+}
+.right-card {
+    padding: 10px 12px 0px 12px;
+}
+.announcements {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    padding-left: 4px;
+    padding-top: 9px;
+}
+.announcements div {
+    padding: 9px 24px 15px 4px;
+}
+.announcements h6 {
+    font-size: .8rem;
+}
+.announcements p {
+    font-size: .6rem;
+}
+.announcements div:nth-child(2) {
+    border-top: 1px solid rgb(128,128,128,0.6);
+    border-bottom: 1px solid rgb(128,128,128,0.6);
+}
+.trending {
+    background-color: aliceblue;
+    padding-bottom: 4px;
+    align-self: end;
+    font-size: 1.125rem;
+}
+.trending-card {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+.trending-items {
+    display: flex;
+    gap: 18px;
+    border: 2px solid white;
+}
+.trending-items p {
+    font-size: 12px;
+}
+.username, .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 8px;
+}
+.card1 {
+    grid-area: 1/1/4/2;
+    background-color: crimson;
+}
+.card2 {
+    grid-area: 1/2/4/3;
+    background-color: palegreen;
+}
+.card3 {
+    grid-area: 1/1/2/2;
+    background-color: navajowhite;
+}
+.card4 {
+    grid-area: 4/1/7/2;
+    background-color: aquamarine;
+}
+.card5 {
+    grid-area: 4/2/7/3;
+    background-color: royalblue ;
+}
+.card6 {
+    grid-area: 7/1/10/2;
+    background-color: indigo;
+}
+.card7 {
+    grid-area: 7/2/10/3;
+    background-color: khaki;
+}
+.card8 {
+    grid-area: 3/1/4/2;
+    background-color: black;
+    color: white;
 }
