--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
 }
 body {
-    width: 60%;
+    max-width: 60%;
+    width: 100%;
     height: 100%;
     margin: auto;
 }
 .main-container {
     display: grid;
-    min-height: 100vh;
+    height: 100vh;
     grid-template-columns: 1.08fr 4fr;
     grid-template-rows: .86fr 4fr;
 }
